<resources>
    <string name="app_name">E-Commerce</string>
    <string name="image_welcome">Image_welcome</string>
    <string name="mustFillPhoneEmail">Nomor telphone atau Email wajib Diisi</string>
    <string name="mustFillPassword">Password wajib Diisi</string>
    <string name="mustFillConfirmPassword">Confirm Password wajib Diisi</string>
    <string name="mustFillName">Nama wajib Diisi</string>
    <string name="logout_message">Are you sure you want to log out ?</string>
    <string name="deleteCart_message">Are you sure you want to Delete Product ?</string>
    <string name="order_now">Order Now</string>
    <string name="home">Home</string>
    <string name="buttoncart">ButtonCart</string>
    <string name="buttonprofile">ButtonProfile</string>
    <string name="view_all">View All</string>
    <string name="popular">Popular</string>
    <string name="all">All</string>
    <string name="topi">Topi</string>
    <string name="sepatu">Sepatu</string>
    <string name="t_shirt">T-Shirt</string>
    <string name="tas">Tas</string>
    <string name="jaket">Jaket</string>
    <string name="hoddie">Hoddie</string>
    <string name="search">Search...</string>
    <string name="button_back">Button Back</string>
    <string name="product_history">Product History</string>
    <string name="change_password">Change Password</string>
    <string name="password_did_not_match">Password Did Not Match</string>
    <string name="password_minimum_6_character">Password Minimum 6 Character</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_or_phone_number">Email or Phone number</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in">Already have an account ? Log In</string>
    <string name="edit_password">Edit Password</string>
    <string name="new_password">New Password</string>
    <string name="urlImage_Ophidia_Mini_GG_Blue">https://magang.crocodic.net/ki/Rainer/KI_Advance_E-Commerce/public/storage/product-thumbnail_picture/5xlNl5NfZhNZhn6MJxBvkFenCY4NE0CqZ7fkgAi6.webp</string>
    <string name="urlImage_Erigo_TShirt_Basic_Series_Feni_Jkt48_Black_Unisex">https://magang.crocodic.net/ki/Rainer/KI_Advance_E-Commerce/public/storage/product-thumbnail_picture/PvgjPBNOAkzo8GBZVVksj72N6tyLVmUWRlvaqmZw.webp</string>
    <string name="urlImage_Erigo_Hoodie_Fortune_JKT48_Beige">https://magang.crocodic.net/ki/Rainer/KI_Advance_E-Commerce/public/storage/product-thumbnail_picture/Hg1FTYtycLVRN81seqgv3igs3865Uh6odIhUVfsl.webp</string>
    <string name="urlImage_Nike_Air_Jordan_1_OG_High_Chicago">https://magang.crocodic.net/ki/Rainer/KI_Advance_E-Commerce/public/storage/product-thumbnail_picture/uIgTQ4QtC9J5jkKnApDmIa9dfOvYxZf7LAToFBxi.webp</string>
    <string name="urlImage_Erigo_Coach_Jacket_Idaina_Kaeru_Black">https://magang.crocodic.net/ki/Rainer/KI_Advance_E-Commerce/public/storage/product-thumbnail_picture/46FwfXISbImexRPJaIdh90e7rCiBcpj4gniJGgeE.webp</string>
    <string name="cart">Cart</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="add_your_review">Add Your Review</string>
    <string name="add_your_review_here">Add Your Review Here</string>
    <string name="submit_your_review">Submit Your Review</string>
    <string name="button_favourite">Button Favourite</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="image_profile">Image Profile</string>
    <string name="button_add_photo">Button Add Photo</string>
    <string name="produk_tidak_ditemukan">Produk Tidak Ditemukan</string>
    <string name="keranjang_kosong">Keranjang Kosong</string>
</resources>