<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="user"
            type="com.bennohan.e_commerce.database.user.User" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E8E8E8"
        android:orientation="vertical"
        tools:context=".ui.home.HomeActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="20dp">

            <ImageButton
                android:contentDescription="@string/button_back"
                android:id="@+id/btn_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:foreground="@drawable/ripple_effect"
                android:background="@null"
                android:src="@drawable/ic_baseline_arrow_back_purple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_cart"
                app:layout_constraintStart_toEndOf="@+id/btn_back"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:contentDescription="@string/buttoncart"
                android:id="@+id/btn_cart"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="15dp"
                android:background="@null"
                android:foreground="@drawable/ripple_effect"
                android:src="@drawable/ic_baseline_shopping_cart_main_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_profile"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:contentDescription="@string/buttonprofile"
                android:id="@+id/iv_profile"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:foreground="@drawable/ripple_effect"
                imageUrlCircle='@{user.photo}'
                android:src="@drawable/ic_baseline_person_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:padding="20dp">

            <EditText
                android:hint="@string/search"
                android:inputType="text"
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_button"
                android:backgroundTint="#F5F5F5"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />





            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/searchView">

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:gravity="start"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_product"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:spanCount="2"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="20dp"
                tools:listitem="@layout/product_item" />

            <TextView
                android:id="@+id/tv_productNotFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/produk_tidak_ditemukan"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rv_product" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>
