<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.bennohan.e_commerce.database.user.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainColor_purple"
        tools:context=".ui.profileSettings.ProfileSettingsActivity">

        <ImageButton
            android:contentDescription="@string/button_back"
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:foreground="@drawable/ripple_effect"
            android:background="@drawable/background_button_product"
            android:backgroundTint="@null"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_purple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_imageLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_welcome"
            android:src="@drawable/image_login_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            app:cardBackgroundColor="#00E80D0D"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_imageLogin">

            <ImageView
                android:contentDescription="@string/image_profile"
                android:id="@+id/iv_profile"
                imageUrlCircle='@{user.photo}'
                android:layout_width="100dp"
                android:layout_height="100dp"
                tools:src="@drawable/ic_baseline_person_24" />

            <ImageView
                android:id="@+id/iv_profileNew"
                android:layout_width="100dp"
                android:contentDescription="@string/image_profile"
                android:layout_height="100dp"
                android:visibility="gone"
                tools:src="@drawable/ic_baseline_person_24" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_editPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="80dp"
                android:layout_marginTop="70dp"
                android:backgroundTint="#CC2C2C2C"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/button_add_photo"
                    android:src="@drawable/ic_baseline_add_a_photo_white" />
            </androidx.cardview.widget.CardView>


        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="@drawable/ripple_effect"
            android:contentDescription="@string/button_add_photo"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            app:layout_constraintBottom_toBottomOf="@+id/card_profile"
            app:layout_constraintEnd_toEndOf="@+id/card_profile" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:background="@drawable/background_login_register"
            android:orientation="vertical"
            android:padding="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_imageLogin">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text='@{user.name}'
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Hirai Momo" />

            <TextView
                android:id="@+id/tv_email_or_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email_or_phone">

                <EditText
                    android:hint="@string/name"
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:autofillHints="username"
                    android:background="@drawable/background_button"
                    android:backgroundTint="@color/background_textInput"
                    android:drawableEnd="@drawable/ic_baseline_edit_24"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:text="Nama" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@drawable/background_button"
                android:backgroundTint="@color/buttonColorYellow"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.337"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.761" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
